--- a/Example/YGFileBrowser/YGFileBrowser-Info.plist
+++ b/Example/YGFileBrowser/YGFileBrowser-Info.plist
@@ -45,5 +45,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>获取权限</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>获取权限</string>
 </dict>
 </plist>
